# job-manager

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  keyspace.sh
backup/: error.rs  jobs.rs  lib.rs  main.rs  test.rs
crates/job-core/: Cargo.toml
crates/job-core/src/: schedule.rs
crates/job-core/src/repo/: cassandra.rs  mod.rs
examples/: main.rs  test.rs
examples/job/: main.rs
job/: Cargo.toml
job/src/: main.rs
src/: error.rs  executor.rs  job_manager.rs  jobs.rs  lib.rs  main.rs  manager.rs  schedule.rs  scheduler.rs
src/repo/: cassandra.rs  mod.rs
