[package]
name = "job"
version = "0.1.0"
edition = "2021"

[dependencies]

async-trait = "0.1.83"
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.37"
cassandra-cpp = "3.0.2"
cron = { version = "0.12.0"}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"
gethostname = "0.3"

#[[examples]]
#name = "examples"

